--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,10 @@
 body {
     background: #f6f6fa;
-    padding-left: 40px;
-    padding-top: 40px;
-    padding-right: 40px;
-    padding-bottom: 40px;
+    padding: 40px;
     font-family: "Montserrat", sans-serif;
 }
 
-ul,
-ol 
-{
+ul, ol {
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -22,67 +17,56 @@ ol
     margin: 0 auto;
 }
 
-/* Main  content*/
+/* Main content */
 
 .main-content {
-    padding-left: 88px;
-    padding-top: 80px;
-    padding-right: 40px;
-    padding-bottom: 88px;   
-    box-sizing:border-box;
+    padding: 80px 40px 88px 88px;
+    box-sizing: border-box;
 }
 
 /* Sidebar */
 
 .sidebar {
-    background:#e0ebfe;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    background: #e0ebfe;
+    padding: 40px;
     box-sizing: border-box;
-    width: 370;
+    width: 370px;
 }
 
 .sidebar-content {
-    padding-left: 40px;
-    padding-top: 40px;
-    padding-right: 40px;
+    padding: 40px;
     box-sizing: border-box;
 }
 
+/* Contacts styles */
 .сontacts-title {
-color: #161d2a;
-    font-family: Montserrat;
+    color: #161d2a;
     font-size: 22px;
     font-weight: 700;
-    line-height: normal;
     margin-top: 0;
     margin-bottom: 8px;
-
 }
-/*  */
+
 .contacts-type {
     color: #161d2a;
     font-size: 14px;
     font-weight: 700;
-    line-height: 24px;
     margin-right: 8px;
 }
 
 .contacts-link {
     color: #2979ff;
     font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
     text-decoration-line: underline;
 }
 
 .сontacts-item {
     margin-top: 0;
     margin-bottom: 4px;
- }
+}
 
 .сontacts-container {
- margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 
 .skills-container {
@@ -93,9 +77,8 @@ color: #161d2a;
     color: #161d2a;
     font-size: 22px;
     font-weight: 700;
-    line-height: normal;
     margin-top: 0;
-    margin-bottom: 8px ;
+    margin-bottom: 8px;
 }
 
 .skills-list {
@@ -105,17 +88,15 @@ color: #161d2a;
 .skills-list-item {
     color: #161d2a;
     font-size: 14px;
-    font-weight: 400;
     line-height: 24px;
 }
 
-/* Main content*/
+/* Main content styles */
 
 .my-profession {
     color: #000;
     font-size: 14px;
     font-weight: 700;
-    line-height: 17px;
     margin-top: 0;
     margin-bottom: 8px;
 }
@@ -124,7 +105,6 @@ color: #161d2a;
     color: #000;
     font-size: 45px;
     font-weight: 700;
-    line-height: 55px;
     margin-top: 0;
     margin-bottom: 12px;
 }
@@ -132,7 +112,6 @@ color: #161d2a;
 .my-descr {
     color: #595959;
     font-size: 14px;
-    font-weight: 400;
     line-height: 24px;
 }
 
@@ -140,13 +119,12 @@ color: #161d2a;
     margin-bottom: 40px;
 }
 
-/* My projects */
+/* Projects styles */
 
 .my-projects-title {
     color: #000;
     font-size: 22px;
     font-weight: 700;
-    line-height: 27px;
     margin-top: 0;
     margin-bottom: 8px;
 }
@@ -156,38 +134,28 @@ color: #161d2a;
     font-size: 14px;
     font-weight: 700;
     line-height: 24px;
-}  
+}
 
 .my-projects-list {
     padding-left: 16px;
-}   
+}
 
 .my-projects-item-link {
     color: #005fff;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
     text-decoration-line: underline;
 }
 
 .my-projects-item-tech {
     color: #595959;
     font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
 }
 
-.my-projects-container {
-    margin-bottom: 40px;
-}
-
-/* Wortk experience */
+/* Work experience styles */
 
 .work-experience-title {
     color: #000;
     font-size: 22px;
     font-weight: 700;
-    line-height: 27px; 
     margin-top: 0px;
     margin-bottom: 8px;
 }
@@ -196,7 +164,6 @@ color: #161d2a;
     color: #000;
     font-size: 16px;
     font-weight: 700;
-    line-height: 20px;
     margin-top: 0;
     margin-bottom: 12px;
 }
@@ -208,35 +175,60 @@ color: #161d2a;
 .work-experience-period {
     color: #a8a8a8;
     font-size: 12px;
-    font-weight: 400;
-    line-height: 15px;
-    margin-bottom: 8px;
 }
 
 .work-experience-separator {
-color: #000;
+    color: #000;
 }
 
 .work-experience-duties-list {
- padding-left: 16px;
+    padding-left: 16px;
 }
 
 .work-experience-duties-item {
     color: #595959;
-    font-family: Montserrat;
     font-size: 14px;
-    font-weight: 400;
-    font-style: normal;
-    font-weight: 400px;
     line-height: 24px;
- }
+}
 
 .work-experience-container {
     margin-bottom: 14px;
 }
 
 .Ed-dobro {
-    margin-top: 40px;    
+    margin-top: 40px;
 }
 
+/* Mobile-first media queries */
 
+/* For mobile devices (up to 767px) */
+@media screen and (max-width: 767px) {
+    .wrapper {
+        flex-direction: column-reverse;
+    }
+    
+    .sidebar {
+        width: 100%;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    
+    .main-content {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+/* For tablets and small screens (768px - 1157px) */
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+    .wrapper {
+        flex-direction: row-reverse;
+    }
+
+    .sidebar {
+        width: 50%;
+    }
+}
+
+/* For desktop (min-width: 1158px) */
+@media screen and (min-width: 1158
